[gd_scene load_steps=58 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://tile_set/TileMaps.tres" type="TileSet" id=2]
[ext_resource path="res://assets/cenario.png" type="Texture" id=3]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo2.png" type="Texture" id=4]
[ext_resource path="res://scenes/Main.gd" type="Script" id=5]
[ext_resource path="res://assets/Vida/vida0.png" type="Texture" id=6]
[ext_resource path="res://assets/Vida/vida1.png" type="Texture" id=7]
[ext_resource path="res://assets/Vida/vida2.png" type="Texture" id=8]
[ext_resource path="res://assets/Vida/vida3.png" type="Texture" id=9]
[ext_resource path="res://assets/Música Do Game/normalgame-GameJam2020.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/Música Do Game/UpLevel-GameJam2020.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo5.png" type="Texture" id=13]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo11.png" type="Texture" id=14]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo6.png" type="Texture" id=15]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo4.png" type="Texture" id=16]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo9.png" type="Texture" id=17]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo10.png" type="Texture" id=18]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo7.png" type="Texture" id=19]
[ext_resource path="res://assets/Animais/peixe-palhaço/Peixes/peixa.png" type="Texture" id=20]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo8.png" type="Texture" id=21]
[ext_resource path="res://assets/Animais/peixe-palhaço/Peixes/peixa1.png" type="Texture" id=22]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo12.png" type="Texture" id=23]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo3.png" type="Texture" id=24]
[ext_resource path="res://assets/Animais/tubarao/Tubarao_jogo (1).png" type="Texture" id=25]
[ext_resource path="res://assets/Animais/peixe-palhaço/Peixes/peixa2.png" type="Texture" id=26]
[ext_resource path="res://scripts/peixe-palhaço.gd" type="Script" id=27]
[ext_resource path="res://scripts/rigid_tubararo.gd" type="Script" id=28]
[ext_resource path="res://assets/oleo/oleo1.svg" type="Texture" id=33]
[ext_resource path="res://assets/oleo/oleo.svg" type="Texture" id=34]
[ext_resource path="res://assets/oleo/oleo2.svg" type="Texture" id=35]
[ext_resource path="res://mobile control/Control.tscn" type="PackedScene" id=41]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/SigmarOne-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 22
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.7636
height = 32.3663

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 26 ), ExtResource( 20 ) ],
"loop": true,
"name": "peixe-palhaço",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 13.6672
height = 48.7386

[sub_resource type="CapsuleShape2D" id=1]
radius = 72.0
height = 234.001

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 24 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 25 ) ],
"loop": true,
"name": "anim_tubarao",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 85.9771
height = 346.113

[sub_resource type="CapsuleShape2D" id=11]
radius = 14.6658
height = 43.2671

[sub_resource type="CapsuleShape2D" id=12]
radius = 78.4059
height = 283.411

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ) ],
"loop": true,
"name": "anim_oleo",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 202.186

[sub_resource type="CircleShape2D" id=17]
radius = 226.385

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=34]
radius = 224.727

[sub_resource type="CircleShape2D" id=35]
radius = 264.976

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 222.597

[sub_resource type="CircleShape2D" id=20]
radius = 265.239

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=22]
radius = 226.094

[sub_resource type="CircleShape2D" id=23]
radius = 265.85

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=31]
radius = 223.529

[sub_resource type="CircleShape2D" id=32]
radius = 256.558

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Front" type="TileMap" parent="."]
z_index = 3
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -130976, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, -65463, 0, 0, -65462, 0, 0, -65461, 0, 0, -65460, 0, 0, -65459, 0, 0, -65458, 0, 0, -65457, 0, 0, -65456, 0, 0, -65455, 0, 0, -65454, 0, 0, -65453, 0, 0, -65452, 0, 0, -65451, 0, 0, -65450, 0, 0, -65449, 0, 0, -65448, 0, 0, -65447, 0, 0, -65446, 0, 0, -65445, 0, 0, -65444, 0, 0, -65443, 0, 0, -65442, 0, 0, -65441, 0, 0, -65440, 0, 0, 65535, 0, 0, 18, 11, 0, 96, 0, 0, 131071, 0, 0, 65632, 0, 0, 196607, 0, 0, 131168, 0, 0, 262143, 0, 0, 196704, 0, 0, 327679, 0, 0, 262240, 0, 0, 393215, 0, 0, 327776, 0, 0, 458751, 0, 0, 393312, 0, 0, 524287, 0, 0, 458848, 0, 0, 589823, 0, 0, 524384, 0, 0, 655359, 0, 0, 589920, 0, 0, 720895, 0, 0, 655456, 0, 0, 786431, 0, 0, 720992, 0, 0, 851967, 0, 0, 786432, 3, 0, 786433, 3, 0, 786434, 7, 0, 786435, 8, 0, 786436, 4, 0, 786437, 3, 0, 786438, 5, 0, 786439, 7, 0, 786440, 8, 0, 786441, 3, 0, 786442, 11, 0, 786443, 5, 0, 786444, 6, 0, 786445, 3, 0, 786446, 4, 0, 786447, 7, 0, 786449, 3, 0, 786450, 8, 0, 786451, 6, 0, 786452, 4, 0, 786453, 5, 0, 786454, 11, 0, 786455, 7, 0, 786456, 1, 0, 786457, 3, 0, 786458, 7, 0, 786459, 11, 0, 786460, 11, 0, 786461, 4, 0, 786462, 6, 0, 786463, 5, 0, 786464, 8, 0, 786466, 7, 0, 786467, 5, 0, 786468, 6, 0, 786469, 5, 0, 786470, 11, 0, 786471, 8, 0, 786472, 5, 0, 786473, 7, 0, 786475, 4, 0, 786477, 7, 0, 786478, 6, 0, 786479, 5, 0, 786480, 8, 0, 786482, 5, 0, 786483, 4, 0, 786484, 8, 0, 786485, 3, 0, 786486, 11, 0, 786487, 11, 0, 786488, 11, 0, 786489, 7, 0, 786490, 8, 0, 786491, 4, 0, 786492, 4, 0, 786494, 5, 0, 786495, 1, 0, 786496, 1, 0, 786497, 4, 0, 786498, 5, 0, 786499, 8, 0, 786500, 11, 0, 786501, 3, 0, 786502, 7, 0, 786503, 11, 0, 786504, 11, 0, 786505, 6, 0, 786506, 3, 0, 786507, 8, 0, 786510, 6, 0, 786513, 5, 0, 786514, 4, 0, 786515, 7, 0, 786518, 3, 0, 786519, 6, 0, 786520, 5, 0, 786521, 7, 0, 786524, 7, 0, 786525, 6, 0, 786526, 8, 0, 786527, 7, 0, 786528, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852007, 0, 0, 852008, 0, 0, 852009, 0, 0, 852010, 0, 0, 852011, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 852018, 0, 0, 852019, 0, 0, 852020, 0, 0, 852021, 0, 0, 852022, 0, 0, 852023, 0, 0, 852024, 0, 0, 852025, 0, 0, 852026, 0, 0, 852027, 0, 0, 852028, 0, 0, 852029, 0, 0, 852030, 0, 0, 852031, 0, 0, 852032, 0, 0, 852033, 0, 0, 852034, 0, 0, 852035, 0, 0, 852036, 0, 0, 852037, 0, 0, 852038, 0, 0, 852039, 0, 0, 852040, 0, 0, 852041, 0, 0, 852042, 0, 0, 852043, 0, 0, 852044, 0, 0, 852045, 0, 0, 852046, 0, 0, 852047, 0, 0, 852048, 0, 0, 852049, 0, 0, 852050, 0, 0, 852051, 0, 0, 852052, 0, 0, 852053, 0, 0, 852054, 0, 0, 852055, 0, 0, 852056, 0, 0, 852057, 0, 0, 852058, 0, 0, 852059, 0, 0, 852060, 0, 0, 852061, 0, 0, 852062, 0, 0, 852063, 0, 0, 852064, 0, 0 )

[node name="spr_background" type="Sprite" parent="."]
position = Vector2( 1512, 352 )
scale = Vector2( 2.12217, 2.39769 )
texture = ExtResource( 3 )

[node name="spr_background2" type="Sprite" parent="."]
position = Vector2( 4596.68, 352.632 )
scale = Vector2( 2.13414, 2.39585 )
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="vidas" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 1193.57, 48.9577 )
scale = Vector2( 0.446, 0.334782 )
frames = SubResource( 2 )
animation = "1"

[node name="score" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 1207.38
margin_top = 85.9184
margin_right = 1247.38
margin_bottom = 125.918
custom_fonts/normal_font = SubResource( 4 )
text = "0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 15.0

[node name="back" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -65465, 2, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 18, 10, 0, 19, 10, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 37, 2, 0, 38, 2, 0, 39, 2, 0, 40, 2, 0, 41, 2, 0, 42, 2, 0, 43, 2, 0, 44, 2, 0, 45, 2, 0, 46, 2, 0, 47, 2, 0, 48, 2, 0, 49, 2, 0, 50, 2, 0, 51, 2, 0, 52, 2, 0, 53, 2, 0, 54, 2, 0, 55, 2, 0, 56, 2, 0, 57, 2, 0, 58, 2, 0, 59, 2, 0, 60, 2, 0, 61, 2, 0, 62, 2, 0, 63, 2, 0, 64, 2, 0, 65, 2, 0, 66, 2, 0, 67, 2, 0, 68, 2, 0, 69, 2, 0, 70, 2, 0, 71, 2, 0, 72, 2, 0, 73, 2, 0, 74, 2, 0, 75, 2, 0, 76, 2, 0, 77, 2, 0, 78, 2, 0, 79, 2, 0, 80, 2, 0, 81, 2, 0, 82, 2, 0, 83, 2, 0, 84, 2, 0, 85, 2, 0, 86, 2, 0, 87, 2, 0, 88, 2, 0, 89, 2, 0, 90, 2, 0, 91, 2, 0, 92, 2, 0, 93, 2, 0, 94, 2, 0, 95, 2, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 10, 0, 65546, 10, 0, 65547, 10, 0, 65548, 10, 0, 65549, 10, 0, 65550, 10, 0, 65551, 10, 0, 65552, 10, 0, 65553, 10, 0, 65554, 10, 0, 65555, 10, 0, 65556, 2, 0, 65557, 2, 0, 65558, 2, 0, 65559, 2, 0, 65560, 2, 0, 65561, 2, 0, 65562, 2, 0, 65563, 2, 0, 65564, 2, 0, 65565, 2, 0, 65575, 2, 0, 65576, 2, 0, 65577, 2, 0, 65578, 2, 0, 65579, 10, 0, 65580, 10, 0, 65581, 10, 0, 65582, 10, 0, 65583, 10, 0, 65584, 10, 0, 65585, 10, 0, 65586, 10, 0, 65587, 10, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 10, 0, 131088, 10, 0, 131089, 10, 0, 131090, 10, 0, 131091, 10, 0, 131092, 2, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 2, 0, 131098, 2, 0, 131099, 2, 0, 131116, 10, 0, 131117, 10, 0, 131118, 10, 0, 131119, 10, 0, 131120, 10, 0, 131121, 10, 0, 131168, 2, 0, 196608, 2, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 10, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 10, 0, 196618, 10, 0, 196619, 10, 0, 196620, 10, 0, 196621, 10, 0, 196622, 10, 0, 196623, 10, 0, 196624, 10, 0, 196625, 10, 0, 196626, 10, 0, 196627, 10, 0, 196628, 2, 0, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 196633, 2, 0, 196634, 2, 0, 196655, 2, 0, 196704, 2, 0, 262144, 2, 0, 262145, 10, 0, 262146, 10, 0, 262147, 10, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 262152, 10, 0, 262153, 10, 0, 262154, 10, 0, 262155, 10, 0, 262156, 10, 0, 262157, 10, 0, 262158, 10, 0, 262159, 10, 0, 262160, 10, 0, 262161, 10, 0, 262162, 10, 0, 262163, 10, 0, 262164, 2, 0, 262165, 2, 0, 262166, 2, 0, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262191, 2, 0, 262201, 10, 0, 262202, 10, 0, 327680, 2, 0, 327681, 10, 0, 327682, 10, 0, 327683, 10, 0, 327684, 10, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327727, 2, 0, 327735, 10, 0, 327736, 10, 0, 327737, 2, 0, 327738, 10, 0, 393216, 2, 0, 393217, 10, 0, 393218, 10, 0, 393219, 10, 0, 393220, 10, 0, 393221, 10, 0, 393222, 10, 0, 393223, 10, 0, 393224, 10, 0, 393225, 10, 0, 393226, 10, 0, 393227, 10, 0, 393228, 10, 0, 393229, 10, 0, 393230, 10, 0, 393231, 10, 0, 393232, 10, 0, 393233, 10, 0, 393234, 10, 0, 393235, 10, 0, 393236, 10, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393263, 2, 0, 393270, 10, 0, 393271, 10, 0, 393272, 2, 0, 393273, 2, 0, 393274, 10, 0, 458752, 2, 0, 458753, 10, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0, 458760, 10, 0, 458761, 10, 0, 458762, 10, 0, 458763, 10, 0, 458764, 10, 0, 458765, 10, 0, 458766, 10, 0, 458767, 10, 0, 458768, 10, 0, 458769, 10, 0, 458770, 10, 0, 458771, 10, 0, 458772, 10, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458799, 2, 0, 458805, 10, 0, 458806, 10, 0, 458807, 2, 0, 458808, 2, 0, 458809, 10, 0, 458810, 10, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 10, 0, 524296, 10, 0, 524297, 10, 0, 524298, 10, 0, 524299, 10, 0, 524300, 10, 0, 524301, 10, 0, 524302, 10, 0, 524303, 10, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 2, 0, 524308, 2, 0, 524309, 2, 0, 524310, 2, 0, 524335, 2, 0, 524341, 10, 0, 524342, 10, 0, 524343, 2, 0, 524344, 2, 0, 524345, 10, 0, 589824, 2, 0, 589869, 2, 0, 589870, 2, 0, 589871, 2, 0, 589878, 10, 0, 589879, 10, 0, 589880, 10, 0, 589881, 10, 0, 720895, 2, 0, 655360, 2, 0, 655404, 2, 0, 655405, 2, 0, 655406, 2, 0, 655407, 2, 0, 720896, 2, 0, 720939, 2, 0, 720940, 2, 0, 720941, 2, 0, 720942, 2, 0, 720943, 2, 0, 786432, 2, 0, 786474, 2, 0, 786475, 2, 0, 786476, 2, 0, 786477, 2, 0, 786478, 2, 0, 786479, 2, 0, 786480, 2, 0, 786481, 2, 0, 786482, 2, 0, 786483, 2, 0, 786484, 2, 0, 786485, 2, 0, 786486, 2, 0, 786487, 2, 0, 786488, 2, 0, 786489, 2, 0, 786490, 2, 0, 786491, 2, 0, 786492, 2, 0, 786493, 2, 0, 786494, 2, 0, 786495, 2, 0, 786496, 2, 0, 786497, 2, 0, 786498, 2, 0, 786499, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 10, 0, 852007, 10, 0, 852022, 2, 0, 852023, 2, 0, 852024, 2, 0, 852025, 2, 0, 852026, 2, 0, 852037, 2, 0, 852038, 2, 0 )

[node name="animals2" type="Node2D" parent="."]

[node name="peixe-palhaço" type="RigidBody2D" parent="animals2"]
position = Vector2( 48, 400 )
z_index = 2
mode = 3
gravity_scale = 0.0
script = ExtResource( 27 )

[node name="collision-peixe-palhaço" type="CollisionShape2D" parent="animals2/peixe-palhaço"]
position = Vector2( 456.238, 76.6384 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="peixe-palhaço-animated" type="AnimatedSprite" parent="animals2/peixe-palhaço"]
position = Vector2( 460.67, 73.0578 )
frames = SubResource( 9 )
animation = "peixe-palhaço"
playing = true

[node name="Area2D" type="Area2D" parent="animals2/peixe-palhaço"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animals2/peixe-palhaço/Area2D"]
position = Vector2( 457.999, 76.6234 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="rigid_tubararo" type="RigidBody2D" parent="animals2"]
position = Vector2( 1100, 650 )
scale = Vector2( 0.7, 0.7 )
mode = 3
gravity_scale = 0.0
script = ExtResource( 28 )

[node name="collision_tubarao" type="CollisionShape2D" parent="animals2/rigid_tubararo"]
position = Vector2( -32, 48 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="animated_tubarao" type="AnimatedSprite" parent="animals2/rigid_tubararo"]
position = Vector2( 16, 16 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
frames = SubResource( 6 )
animation = "anim_tubarao"
frame = 6
playing = true

[node name="Area2D" type="Area2D" parent="animals2/rigid_tubararo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animals2/rigid_tubararo/Area2D"]
position = Vector2( -12.1849, 51.9143 )
rotation = 1.5708
z_index = 4
shape = SubResource( 7 )

[node name="peixe-palhaço2" type="RigidBody2D" parent="animals2"]
position = Vector2( 1600, 140 )
z_index = 4
mode = 3
gravity_scale = 0.0
script = ExtResource( 27 )

[node name="collision-peixe-palhaço" type="CollisionShape2D" parent="animals2/peixe-palhaço2"]
position = Vector2( 456.238, 76.6384 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="peixe-palhaço-animated" type="AnimatedSprite" parent="animals2/peixe-palhaço2"]
position = Vector2( 460.67, 73.0578 )
frames = SubResource( 9 )
animation = "peixe-palhaço"
playing = true

[node name="Area2D" type="Area2D" parent="animals2/peixe-palhaço2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animals2/peixe-palhaço2/Area2D"]
position = Vector2( 459.191, 76.8284 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="peixe-palhaço3" type="RigidBody2D" parent="animals2"]
position = Vector2( 1900, 450 )
z_index = 4
mode = 3
gravity_scale = 0.0
script = ExtResource( 27 )

[node name="collision-peixe-palhaço" type="CollisionShape2D" parent="animals2/peixe-palhaço3"]
position = Vector2( 456.238, 76.6384 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="peixe-palhaço-animated" type="AnimatedSprite" parent="animals2/peixe-palhaço3"]
position = Vector2( 460.67, 73.0578 )
frames = SubResource( 9 )
animation = "peixe-palhaço"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="animals2/peixe-palhaço3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animals2/peixe-palhaço3/Area2D"]
position = Vector2( 459.191, 76.8284 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="rigid_tubararo2" type="RigidBody2D" parent="animals2"]
position = Vector2( 4800, 400 )
mode = 3
gravity_scale = 0.0
script = ExtResource( 28 )

[node name="collision_tubarao" type="CollisionShape2D" parent="animals2/rigid_tubararo2"]
position = Vector2( -32, 48 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="animated_tubarao" type="AnimatedSprite" parent="animals2/rigid_tubararo2"]
position = Vector2( 16, 16 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
frames = SubResource( 6 )
animation = "anim_tubarao"
frame = 5
playing = true

[node name="Area2D" type="Area2D" parent="animals2/rigid_tubararo2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animals2/rigid_tubararo2/Area2D"]
position = Vector2( -7.89209, 45.5935 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="oleo" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="oleo"]
position = Vector2( 2170, 400 )
scale = Vector2( 0.2, 0.2 )
z_index = 4
frames = SubResource( 15 )
animation = "anim_oleo"
frame = 2
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="oleo/AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite/StaticBody2D"]
position = Vector2( -21.6143, -18.9126 )
shape = SubResource( 16 )

[node name="oleo1" type="Area2D" parent="oleo/AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite/oleo1"]
position = Vector2( -20, -15 )
shape = SubResource( 17 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="oleo"]
position = Vector2( 1200, 450 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 33 )

[node name="StaticBody2D" type="StaticBody2D" parent="oleo/AnimatedSprite5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite5/StaticBody2D"]
position = Vector2( -11.9746, -11.9748 )
shape = SubResource( 34 )

[node name="oleo5" type="Area2D" parent="oleo/AnimatedSprite5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite5/oleo5"]
position = Vector2( -8.98047, -5.9874 )
shape = SubResource( 35 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="oleo"]
position = Vector2( 3250, 260 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 18 )
frame = 1
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="oleo/AnimatedSprite2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite2/StaticBody2D"]
position = Vector2( -16.1321, -14.3396 )
shape = SubResource( 19 )

[node name="oleo2" type="Area2D" parent="oleo/AnimatedSprite2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite2/oleo2"]
position = Vector2( -14.3394, -17.9246 )
shape = SubResource( 20 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="oleo"]
position = Vector2( 4200, 640 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 21 )

[node name="StaticBody2D" type="StaticBody2D" parent="oleo/AnimatedSprite3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite3/StaticBody2D"]
position = Vector2( -13.2051, 0 )
shape = SubResource( 22 )

[node name="oleo3" type="Area2D" parent="oleo/AnimatedSprite3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite3/oleo3"]
position = Vector2( -17.6055, -6.60193 )
shape = SubResource( 23 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="oleo"]
position = Vector2( 5600, 300 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 30 )

[node name="StaticBody2D" type="StaticBody2D" parent="oleo/AnimatedSprite4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite4/StaticBody2D"]
position = Vector2( -18.377, 3.67554 )
shape = SubResource( 31 )

[node name="oleo4" type="Area2D" parent="oleo/AnimatedSprite4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="oleo/AnimatedSprite4/oleo4"]
position = Vector2( -22.0518, 7.35095 )
shape = SubResource( 32 )

[node name="Control" parent="." instance=ExtResource( 41 )]

[connection signal="body_entered" from="animals2/peixe-palhaço/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="animals2/rigid_tubararo/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="animals2/peixe-palhaço2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="animals2/peixe-palhaço3/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="animals2/rigid_tubararo2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="oleo/AnimatedSprite/oleo1" to="." method="_on_oleo1_body_entered"]
[connection signal="body_entered" from="oleo/AnimatedSprite5/oleo5" to="." method="_on_oleo5_body_entered"]
[connection signal="body_entered" from="oleo/AnimatedSprite2/oleo2" to="." method="_on_oleo2_body_entered"]
[connection signal="body_entered" from="oleo/AnimatedSprite3/oleo3" to="." method="_on_oleo3_body_entered"]
[connection signal="body_entered" from="oleo/AnimatedSprite4/oleo4" to="." method="_on_oleo4_body_entered"]
